# wikipedia-cli

./: Cargo.toml  readme.md
.github/workflows/: CI.yaml
src/: main.rs
