[package]
name = "wikipedia-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
wikipedia-client = { git = "https://github.com/elamribadrayour/wikipedia-client.git", version = "0.1.0" }
# wikipedia-client = { path = "../wikipedia-client" }
